@@ -51,6 +51,8 @@ Changes in @NEW@:
     * The getFileContents and getFileVersions server side calls have
       been optimized for faster execution
     * The SQL query in getTroveList has been sped up by a 3-5x factor.
+    * conary update group-dist --info on a test machine went from taking ~60s
+      to ~33s, due to caching of thawed troves.
 
   o Server Changes
     * Several SQL queries have been updated for PostgreSQL compatibility
